Fixed image layout issue in popup where image was squeezed when popup opened for the first time

--- a/public/stylesheets/app.styl
+++ b/public/stylesheets/app.styl
@@ -23,9 +23,9 @@ html, body, .fullscreen, #map
   box-orient horizontal
   box-direction normal
   flex-direction row
-  box-pack center
-  flex-pack center
-  justify-content center
+  box-pack justify
+  flex-pack justify
+  justify-content space-between
 
 #address1
   margin-bottom 0
